--- a/src/app/features/purchase-order/add-purchase-order/add-purchase-order.component.html
+++ b/src/app/features/purchase-order/add-purchase-order/add-purchase-order.component.html
@@ -1,1 +1,15 @@
-<p>add-purchase-order works!</p>
+<form (submit)="addPurchaseOrder()">
+    
+    <label>Customer ID</label>
+    <input type="text" name="customerID" [(ngModel)]="customerID">
+    <label>Employee ID</label>
+    <input type="text" name="employeeID" [(ngModel)]="employeeID">
+    <label>Ship Name</label>
+    <input type="text" name="shipName" [(ngModel)]="shipName">
+    <label>Ship City</label>
+    <input type="text" name="shipCity" [(ngModel)]="shipCity">
+    <label>Ship Address </label>
+    <input type="text" name="shipAddress" [(ngModel)]="shipAddress">
+    <button type="submit">Add Purchase Order</button>&nbsp;&nbsp;
+    <a [routerLink]="['/purchaseorder']"   class="btn">Cancel</a>
+</form>
