--- a/src/app/features/purchase-order/edit-purchase-order/edit-purchase-order.component.html
+++ b/src/app/features/purchase-order/edit-purchase-order/edit-purchase-order.component.html
@@ -1,1 +1,16 @@
-<p>edit-purchase-order works!</p>
+<form [formGroup]="form" (submit)="submit()">
+    <!-- <label>OrderID</label>
+    <input type="text" name="id" disabled> -->
+    <label>Customer ID</label>
+    <input type="text" name="customerID" formControlName="customerID">
+    <label>Employee ID </label>
+    <input type="text" name="employeeID" formControlName="employeeID">
+    <label>Ship Name</label>
+    <input type="text" name="shipName" formControlName="shipName">
+    <label>Ship City </label>
+    <input type="text" name="shipCity" formControlName="shipCity">
+    <label>Ship Address </label>
+    <input type="text" name="shipAddress" formControlName="shipAddress">
+    <button type="submit">Update Purchase Order</button>&nbsp;&nbsp;
+    <a [routerLink]="['/purchaseorder']"   class="btn">Cancel</a>
+</form>
