--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,1 +1,12 @@
-<p>layout works!</p>
+
+
+<app-header></app-header>
+<div class="wrapper">
+    <div class="left-content">
+        <app-menu></app-menu>
+    </div>
+    <div class="right-content">
+        
+        <router-outlet></router-outlet>
+    </div>
+</div>
