--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -1,1 +1,6 @@
-<p>menu works!</p>
+<div class="sidebar">
+    <ul class="side-menu">
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/purchaseorder">Purchase Order</a></li>
+    </ul>
+</div>
