small text change

--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
     <ul class="side-menu">
         <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/purchaseorder">Purchase Order</a></li>
+        <li><a routerLink="/purchaseorder">Purchase Orders</a></li>
     </ul>
 </div>
